final_project/PLParser.py
# Generated from PL.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class PLParser ( Parser ):

    grammarFileName = "PL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'->'", "'Dear Program,'", "'in'", 
                     "'save'", "'Thank you.'", "'='", "'+'", "'-'", "'*'", 
                     "'/'", "';'", "'('", "')'", "'{'", "'}'", "'!'", "','", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'if'", 
                     "'else'", "'while'", "'break'", "'print'", "'def'", 
                     "'return'" ]

    symbolicNames = [ "<INVALID>", "COLUMN", "ARROW", "GREETING", "IN", 
                      "SAVE", "END", "EQUAL", "ADD", "SUBTRACT", "MULTIPLY", 
                      "DIVIDE", "SEMI", "BRACE_L", "BRACE_R", "CURLY_L", 
                      "CURLY_R", "EXCL", "COMMA", "VARIABLE", "COMMENT", 
                      "NUMBER", "STR", "COMPARE_EQ", "COMPARE_NE", "COMPARE_G", 
                      "COMPARE_GE", "COMPARE_L", "COMPARE_LE", "IF", "ELSE", 
                      "WHILE", "BREAK", "PRINT", "DEF", "RETURN", "NAME", 
                      "WS" ]

    RULE_script = 0
    RULE_body = 1
    RULE_command = 2
    RULE_if_command = 3
    RULE_else_command = 4
    RULE_while_command = 5
    RULE_break_command = 6
    RULE_print_command = 7
    RULE_function_command = 8
    RULE_function_call = 9
    RULE_return_command = 10
    RULE_comment = 11
    RULE_assign = 12
    RULE_value = 13

    ruleNames =  [ "script", "body", "command", "if_command", "else_command", 
                   "while_command", "break_command", "print_command", "function_command", 
                   "function_call", "return_command", "comment", "assign", 
                   "value" ]

    EOF = Token.EOF
    COLUMN=1
    ARROW=2
    GREETING=3
    IN=4
    SAVE=5
    END=6
    EQUAL=7
    ADD=8
    SUBTRACT=9
    MULTIPLY=10
    DIVIDE=11
    SEMI=12
    BRACE_L=13
    BRACE_R=14
    CURLY_L=15
    CURLY_R=16
    EXCL=17
    COMMA=18
    VARIABLE=19
    COMMENT=20
    NUMBER=21
    STR=22
    COMPARE_EQ=23
    COMPARE_NE=24
    COMPARE_G=25
    COMPARE_GE=26
    COMPARE_L=27
    COMPARE_LE=28
    IF=29
    ELSE=30
    WHILE=31
    BREAK=32
    PRINT=33
    DEF=34
    RETURN=35
    NAME=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ScriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GREETING(self):
            return self.getToken(PLParser.GREETING, 0)

        def body(self):
            return self.getTypedRuleContext(PLParser.BodyContext,0)


        def END(self):
            return self.getToken(PLParser.END, 0)

        def getRuleIndex(self):
            return PLParser.RULE_script

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScript" ):
                return visitor.visitScript(self)
            else:
                return visitor.visitChildren(self)




    def script(self):

        localctx = PLParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(PLParser.GREETING)
            self.state = 29
            self.body()
            self.state = 30
            self.match(PLParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLParser.CommandContext)
            else:
                return self.getTypedRuleContext(PLParser.CommandContext,i)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLParser.CommentContext)
            else:
                return self.getTypedRuleContext(PLParser.CommentContext,i)


        def getRuleIndex(self):
            return PLParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = PLParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PLParser.SAVE) | (1 << PLParser.COMMENT) | (1 << PLParser.IF) | (1 << PLParser.WHILE) | (1 << PLParser.BREAK) | (1 << PLParser.PRINT) | (1 << PLParser.DEF) | (1 << PLParser.RETURN) | (1 << PLParser.NAME))) != 0):
                self.state = 34
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [PLParser.SAVE, PLParser.IF, PLParser.WHILE, PLParser.BREAK, PLParser.PRINT, PLParser.DEF, PLParser.RETURN, PLParser.NAME]:
                    self.state = 32
                    self.command()
                    pass
                elif token in [PLParser.COMMENT]:
                    self.state = 33
                    self.comment()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(PLParser.AssignContext,0)


        def SEMI(self):
            return self.getToken(PLParser.SEMI, 0)

        def if_command(self):
            return self.getTypedRuleContext(PLParser.If_commandContext,0)


        def while_command(self):
            return self.getTypedRuleContext(PLParser.While_commandContext,0)


        def break_command(self):
            return self.getTypedRuleContext(PLParser.Break_commandContext,0)


        def print_command(self):
            return self.getTypedRuleContext(PLParser.Print_commandContext,0)


        def function_command(self):
            return self.getTypedRuleContext(PLParser.Function_commandContext,0)


        def function_call(self):
            return self.getTypedRuleContext(PLParser.Function_callContext,0)


        def return_command(self):
            return self.getTypedRuleContext(PLParser.Return_commandContext,0)


        def getRuleIndex(self):
            return PLParser.RULE_command

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = PLParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PLParser.SAVE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.assign()
                self.state = 40
                self.match(PLParser.SEMI)
                pass
            elif token in [PLParser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 42
                self.if_command()
                pass
            elif token in [PLParser.WHILE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 43
                self.while_command()
                pass
            elif token in [PLParser.BREAK]:
                self.enterOuterAlt(localctx, 4)
                self.state = 44
                self.break_command()
                self.state = 45
                self.match(PLParser.SEMI)
                pass
            elif token in [PLParser.PRINT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 47
                self.print_command()
                self.state = 48
                self.match(PLParser.SEMI)
                pass
            elif token in [PLParser.DEF]:
                self.enterOuterAlt(localctx, 6)
                self.state = 50
                self.function_command()
                pass
            elif token in [PLParser.NAME]:
                self.enterOuterAlt(localctx, 7)
                self.state = 51
                self.function_call()
                self.state = 52
                self.match(PLParser.SEMI)
                pass
            elif token in [PLParser.RETURN]:
                self.enterOuterAlt(localctx, 8)
                self.state = 54
                self.return_command()
                self.state = 55
                self.match(PLParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_commandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PLParser.RULE_if_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfCommandSingleContext(If_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PLParser.If_commandContext
            super().__init__(parser)
            self.elseBody = None # Else_commandContext
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(PLParser.IF, 0)
        def ARROW(self):
            return self.getToken(PLParser.ARROW, 0)
        def value(self):
            return self.getTypedRuleContext(PLParser.ValueContext,0)

        def COLUMN(self):
            return self.getToken(PLParser.COLUMN, 0)
        def command(self):
            return self.getTypedRuleContext(PLParser.CommandContext,0)

        def else_command(self):
            return self.getTypedRuleContext(PLParser.Else_commandContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfCommandSingle" ):
                return visitor.visitIfCommandSingle(self)
            else:
                return visitor.visitChildren(self)


    class IfCommandBodyContext(If_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PLParser.If_commandContext
            super().__init__(parser)
            self.elseBody = None # Else_commandContext
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(PLParser.IF, 0)
        def ARROW(self):
            return self.getToken(PLParser.ARROW, 0)
        def value(self):
            return self.getTypedRuleContext(PLParser.ValueContext,0)

        def COLUMN(self):
            return self.getToken(PLParser.COLUMN, 0)
        def CURLY_L(self):
            return self.getToken(PLParser.CURLY_L, 0)
        def body(self):
            return self.getTypedRuleContext(PLParser.BodyContext,0)

        def CURLY_R(self):
            return self.getToken(PLParser.CURLY_R, 0)
        def else_command(self):
            return self.getTypedRuleContext(PLParser.Else_commandContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfCommandBody" ):
                return visitor.visitIfCommandBody(self)
            else:
                return visitor.visitChildren(self)



    def if_command(self):

        localctx = PLParser.If_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if_command)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = PLParser.IfCommandBodyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.match(PLParser.IF)
                self.state = 60
                self.match(PLParser.ARROW)
                self.state = 61
                self.value(0)
                self.state = 62
                self.match(PLParser.COLUMN)
                self.state = 63
                self.match(PLParser.CURLY_L)
                self.state = 64
                self.body()
                self.state = 65
                self.match(PLParser.CURLY_R)
                self.state = 67
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 66
                    localctx.elseBody = self.else_command()


                pass

            elif la_ == 2:
                localctx = PLParser.IfCommandSingleContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.match(PLParser.IF)
                self.state = 70
                self.match(PLParser.ARROW)
                self.state = 71
                self.value(0)
                self.state = 72
                self.match(PLParser.COLUMN)
                self.state = 73
                self.command()
                self.state = 75
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 74
                    localctx.elseBody = self.else_command()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Else_commandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PLParser.RULE_else_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ElseCommandBodyContext(Else_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PLParser.Else_commandContext
            super().__init__(parser)
            self.elseBody = None # BodyContext
            self.copyFrom(ctx)

        def ELSE(self):
            return self.getToken(PLParser.ELSE, 0)
        def CURLY_L(self):
            return self.getToken(PLParser.CURLY_L, 0)
        def CURLY_R(self):
            return self.getToken(PLParser.CURLY_R, 0)
        def body(self):
            return self.getTypedRuleContext(PLParser.BodyContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseCommandBody" ):
                return visitor.visitElseCommandBody(self)
            else:
                return visitor.visitChildren(self)


    class ElseCommandSingleContext(Else_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PLParser.Else_commandContext
            super().__init__(parser)
            self.elseLine = None # CommandContext
            self.copyFrom(ctx)

        def ELSE(self):
            return self.getToken(PLParser.ELSE, 0)
        def command(self):
            return self.getTypedRuleContext(PLParser.CommandContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseCommandSingle" ):
                return visitor.visitElseCommandSingle(self)
            else:
                return visitor.visitChildren(self)



    def else_command(self):

        localctx = PLParser.Else_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_else_command)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = PLParser.ElseCommandBodyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.match(PLParser.ELSE)
                self.state = 80
                self.match(PLParser.CURLY_L)
                self.state = 81
                localctx.elseBody = self.body()
                self.state = 82
                self.match(PLParser.CURLY_R)
                pass

            elif la_ == 2:
                localctx = PLParser.ElseCommandSingleContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.match(PLParser.ELSE)
                self.state = 85
                localctx.elseLine = self.command()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_commandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PLParser.RULE_while_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileCommandSingleContext(While_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PLParser.While_commandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(PLParser.WHILE, 0)
        def BRACE_L(self):
            return self.getToken(PLParser.BRACE_L, 0)
        def value(self):
            return self.getTypedRuleContext(PLParser.ValueContext,0)

        def BRACE_R(self):
            return self.getToken(PLParser.BRACE_R, 0)
        def command(self):
            return self.getTypedRuleContext(PLParser.CommandContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileCommandSingle" ):
                return visitor.visitWhileCommandSingle(self)
            else:
                return visitor.visitChildren(self)


    class WhileCommandBodyContext(While_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PLParser.While_commandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(PLParser.WHILE, 0)
        def BRACE_L(self):
            return self.getToken(PLParser.BRACE_L, 0)
        def value(self):
            return self.getTypedRuleContext(PLParser.ValueContext,0)

        def BRACE_R(self):
            return self.getToken(PLParser.BRACE_R, 0)
        def CURLY_L(self):
            return self.getToken(PLParser.CURLY_L, 0)
        def body(self):
            return self.getTypedRuleContext(PLParser.BodyContext,0)

        def CURLY_R(self):
            return self.getToken(PLParser.CURLY_R, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileCommandBody" ):
                return visitor.visitWhileCommandBody(self)
            else:
                return visitor.visitChildren(self)



    def while_command(self):

        localctx = PLParser.While_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_while_command)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = PLParser.WhileCommandBodyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(PLParser.WHILE)
                self.state = 89
                self.match(PLParser.BRACE_L)
                self.state = 90
                self.value(0)
                self.state = 91
                self.match(PLParser.BRACE_R)
                self.state = 92
                self.match(PLParser.CURLY_L)
                self.state = 93
                self.body()
                self.state = 94
                self.match(PLParser.CURLY_R)
                pass

            elif la_ == 2:
                localctx = PLParser.WhileCommandSingleContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.match(PLParser.WHILE)
                self.state = 97
                self.match(PLParser.BRACE_L)
                self.state = 98
                self.value(0)
                self.state = 99
                self.match(PLParser.BRACE_R)
                self.state = 100
                self.command()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Break_commandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PLParser.RULE_break_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BreakCommandContext(Break_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PLParser.Break_commandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BREAK(self):
            return self.getToken(PLParser.BREAK, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakCommand" ):
                return visitor.visitBreakCommand(self)
            else:
                return visitor.visitChildren(self)



    def break_command(self):

        localctx = PLParser.Break_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_break_command)
        try:
            localctx = PLParser.BreakCommandContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(PLParser.BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Print_commandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PLParser.RULE_print_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintCommandContext(Print_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PLParser.Print_commandContext
            super().__init__(parser)
            self.printParams = None # ValueContext
            self.copyFrom(ctx)

        def PRINT(self):
            return self.getToken(PLParser.PRINT, 0)
        def BRACE_L(self):
            return self.getToken(PLParser.BRACE_L, 0)
        def BRACE_R(self):
            return self.getToken(PLParser.BRACE_R, 0)
        def value(self):
            return self.getTypedRuleContext(PLParser.ValueContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintCommand" ):
                return visitor.visitPrintCommand(self)
            else:
                return visitor.visitChildren(self)



    def print_command(self):

        localctx = PLParser.Print_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_print_command)
        self._la = 0 # Token type
        try:
            localctx = PLParser.PrintCommandContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(PLParser.PRINT)
            self.state = 107
            self.match(PLParser.BRACE_L)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PLParser.SUBTRACT) | (1 << PLParser.BRACE_L) | (1 << PLParser.EXCL) | (1 << PLParser.VARIABLE) | (1 << PLParser.NUMBER) | (1 << PLParser.STR) | (1 << PLParser.NAME))) != 0):
                self.state = 108
                localctx.printParams = self.value(0)


            self.state = 111
            self.match(PLParser.BRACE_R)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_commandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PLParser.RULE_function_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FunctionCommandContext(Function_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PLParser.Function_commandContext
            super().__init__(parser)
            self.funcName = None # Token
            self.copyFrom(ctx)

        def DEF(self):
            return self.getToken(PLParser.DEF, 0)
        def BRACE_L(self):
            return self.getToken(PLParser.BRACE_L, 0)
        def BRACE_R(self):
            return self.getToken(PLParser.BRACE_R, 0)
        def CURLY_L(self):
            return self.getToken(PLParser.CURLY_L, 0)
        def body(self):
            return self.getTypedRuleContext(PLParser.BodyContext,0)

        def CURLY_R(self):
            return self.getToken(PLParser.CURLY_R, 0)
        def NAME(self):
            return self.getToken(PLParser.NAME, 0)
        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(PLParser.VARIABLE)
            else:
                return self.getToken(PLParser.VARIABLE, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCommand" ):
                return visitor.visitFunctionCommand(self)
            else:
                return visitor.visitChildren(self)



    def function_command(self):

        localctx = PLParser.Function_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function_command)
        self._la = 0 # Token type
        try:
            localctx = PLParser.FunctionCommandContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(PLParser.DEF)
            self.state = 114
            localctx.funcName = self.match(PLParser.NAME)
            self.state = 115
            self.match(PLParser.BRACE_L)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PLParser.VARIABLE:
                self.state = 116
                self.match(PLParser.VARIABLE)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(PLParser.BRACE_R)
            self.state = 123
            self.match(PLParser.CURLY_L)
            self.state = 124
            self.body()
            self.state = 125
            self.match(PLParser.CURLY_R)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PLParser.RULE_function_call

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FunctionCallContext(Function_callContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PLParser.Function_callContext
            super().__init__(parser)
            self.funcName = None # Token
            self.copyFrom(ctx)

        def BRACE_L(self):
            return self.getToken(PLParser.BRACE_L, 0)
        def BRACE_R(self):
            return self.getToken(PLParser.BRACE_R, 0)
        def NAME(self):
            return self.getToken(PLParser.NAME, 0)
        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLParser.ValueContext)
            else:
                return self.getTypedRuleContext(PLParser.ValueContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)



    def function_call(self):

        localctx = PLParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function_call)
        self._la = 0 # Token type
        try:
            localctx = PLParser.FunctionCallContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            localctx.funcName = self.match(PLParser.NAME)
            self.state = 128
            self.match(PLParser.BRACE_L)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PLParser.SUBTRACT) | (1 << PLParser.BRACE_L) | (1 << PLParser.EXCL) | (1 << PLParser.VARIABLE) | (1 << PLParser.NUMBER) | (1 << PLParser.STR) | (1 << PLParser.NAME))) != 0):
                self.state = 129
                self.value(0)
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(PLParser.BRACE_R)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Return_commandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PLParser.RULE_return_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReturnCommandContext(Return_commandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PLParser.Return_commandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(PLParser.RETURN, 0)
        def value(self):
            return self.getTypedRuleContext(PLParser.ValueContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnCommand" ):
                return visitor.visitReturnCommand(self)
            else:
                return visitor.visitChildren(self)



    def return_command(self):

        localctx = PLParser.Return_commandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_return_command)
        self._la = 0 # Token type
        try:
            localctx = PLParser.ReturnCommandContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(PLParser.RETURN)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PLParser.SUBTRACT) | (1 << PLParser.BRACE_L) | (1 << PLParser.EXCL) | (1 << PLParser.VARIABLE) | (1 << PLParser.NUMBER) | (1 << PLParser.STR) | (1 << PLParser.NAME))) != 0):
                self.state = 138
                self.value(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(PLParser.COMMENT, 0)

        def getRuleIndex(self):
            return PLParser.RULE_comment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):
